--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alisson Diniz Resume</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+        <header>
+            <div class="container-header">
+            <h3 class="name">Alisson Diniz</h3>
+            <h4 class="ocupation">Developer Full-stack</h4>
+            <p class="description">Programador em formação, Entusiasta em tecnologia e apaixonado em solucionar problemas. Atualmente me especializando em desenvolvimento Front-End.</p>
+            <div class="avatar">
+                <img src="./assets/picture.png" alt="">
+            </div>
+            
+            <div class="arrow-down">
+                <i class="icon-arrow-down"></i>
+            </div>
+            </div>
+        </header>
+
+
+</body>
+</html>
