Scroll effect on header

--- a/index.html
+++ b/index.html
@@ -9,12 +9,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
+
 </head>
 <body>
         <header>
+            <div class="header-fixed opacity-0">
+
+                <div class="container-header-fixed">
+                    <div class="container-info-fixed">
+                        <h3 class="name">Alisson Diniz</h3>
+                        <h4 class="ocupation">Developer Full-stack</h4>
+                    </div>
+    
+                <div class="avatar">
+                    <img src="./assets/picture.png" alt="">
+                </div>
+                
+                </div>
+            </div>
+
             <div class="container-header">
-            <h3 class="name">Alisson Diniz</h3>
-            <h4 class="ocupation">Developer Full-stack</h4>
+                <div class="container-info">
+                    <h3 class="name">Alisson Diniz</h3>
+                    <h4 class="ocupation">Developer Full-stack</h4>
+                </div>
+
             <p class="description">Programador em formação, Entusiasta em tecnologia e apaixonado em solucionar problemas. Atualmente me especializando em desenvolvimento Front-End.</p>
             <div class="avatar">
                 <img src="./assets/picture.png" alt="">
@@ -26,6 +46,20 @@
             </div>
         </header>
 
+        <div class="tech_skils">
+
+            <h2>Habilidades <br> & Tecnologias</h2>
+
+            <div class="content_tech">
+                <h3>Tenho experiencia</h3>
+                <p>HTML5 | CSS3 | Javascript | Git & Github</p>
+                <h3>Tenho experiencia</h3>
+                <p>HTML5 | CSS3 | Javascript | Git & Github</p>
+                <h3>Tenho experiencia</h3>
+                <p>HTML5 | CSS3 | Javascript | Git & Github</p>
+            </div>
+
+        </div>
 
 </body>
 </html>
